RESOLVED FIXED127140
FrameView compile fix for non-accelerated-compositing
https://bugs.webkit.org/show_bug.cgi?id=127140
Summary FrameView compile fix for non-accelerated-compositing
Alex Christensen
Reported 2014-01-16 13:43:42 PST
http://trac.webkit.org/changeset/162138 doesn't compile because RenderView:: backgroundRect requires a parameter. In RenderView::backgroundRect, unscaledDocumentRect() is used if hasColumns() and hasExtendedBackground() are both false. I'm not completely sure which rectangle to use. Is this correct? When I use accelerated compositing on WinCairo, will all ports use accelerated compositing? Then we could get rid of all the non-accelerated-compositing code, right?
Attachments
Patch (1.12 KB, patch)
2014-01-16 13:46 PST, Alex Christensen
no flags
Alex Christensen
Comment 1 2014-01-16 13:46:32 PST
Beth Dakin
Comment 2 2014-01-16 15:50:58 PST
Comment on attachment 221410 [details] Patch Thanks Alex!
WebKit Commit Bot
Comment 3 2014-01-16 17:47:08 PST
Comment on attachment 221410 [details] Patch Clearing flags on attachment: 221410 Committed r162176: <http://trac.webkit.org/changeset/162176>
WebKit Commit Bot
Comment 4 2014-01-16 17:47:10 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.