Compile fix for WinCairo after r162138. https://bugs.webkit.org/show_bug.cgi?id=127140

Patch by Alex Christensen <achristensen@webkit.org> on 2014-01-16
Reviewed by Beth Dakin.

* page/FrameView.cpp:
(WebCore::FrameView::extendedBackgroundRect):
Use unscaledDocumentRect for extendedBackgroundRect without accelerated compositing.

Canonical link: https://commits.webkit.org/145143@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@162176 268f45cc-cd09-0410-ab3c-d52691b4dbfc